# kaku

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  STYLE.md  index.html  package-lock.json  package.json
.claude/: launch.json
docs/: ARCHITECTURE.md  PRODUCT_SCOPE.md  SECURITY.md  STATUS.md
mockups/: writer-ui.html
src/: App.tsx  InlineEdit.tsx  Settings.tsx  model.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  keys.rs  lib.rs  main.rs
src/components/: Editor.tsx  InlineEdit.tsx  Settings.tsx  Sidebar.tsx  Titlebar.tsx  Toolbar.tsx
src/hooks/: useAiEdit.ts  useAutosave.ts  useDocument.ts  useInlineEdit.ts  useLatest.ts  useRecents.ts
src/lib/: ai-prefs.test.ts  ai-prefs.ts  ai-suggestion.ts  editor-extensions.ts  frontmatter.test.ts  frontmatter.ts  markdown.test.ts  markdown.ts  model.test.ts  model.ts  paths.test.ts  paths.ts  recents.test.ts  recents.ts  storage.test.ts  storage.ts  textarea-measure.ts
src/lib/tauri/: ai.ts  fs.ts  keys.ts
src/styles/: base.css  editor.css  index.css  tokens.css
src/styles/chrome/: editor-pane.css  empty.css  inline-edit.css  settings.css  sidebar.css  titlebar.css  toolbar.css  workspace.css
